--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <script src="jspm.config.js"></script>
   <script src="dist/bundle.js"></script>
   <script>
+    var BASE_URI = "https://wt-511d6c5e91afae05e2f1468adca2fdd5-0.run.webtask.io/webtask-totp";
     SystemJS.config({
       production: true
     });
